Reimplemented comments / notes

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -27,11 +27,12 @@
     "noPay": "بدون تكلفة",
     "submit": "إرسال",
     "clearForm": "حذف البيانات",
-    "whatsapp": "واتسأب",
+    "whatsapp": "واتساب",
     "telegram": "تيليجرام",
     "call": "اتصال",
     "search": "بحث",
-    "loading": "تحميل"
+    "loading": "تحميل",
+    "cancel": "الغاء"
   },
   "dateTime": {
     "day": "يوم",
@@ -84,7 +85,7 @@
     "email": "البريد الالكتروني",
     "facebookLink": "رابط الفيسبوك",
     "nationality": "الجنسية",
-    "timezone": "المنطة الزمنية",
+    "timezone": "المنطقة الزمنية",
     "country": "الدولة",
     "governorate": "المحافظة",
     "residence": "محل الإقامة",
@@ -102,7 +103,8 @@
     "quran": "هل سبق لك حفظ شئ من القرآن ؟",
     "zoom": "هل في امكانك استخدام تطبيق المحادثات \"Zoom\"؟ حيث أن اللقاءات تتم من خلاله.",
     "status": "الحالة",
-    "subscription": "الاشتراك"
+    "subscription": "الاشتراك",
+    "leaveQuestion": "اذا كان لديك اي استفسارات أو تعليقات اكتب لنا هنا"
   },
   "pages": {
     "students": {
@@ -172,6 +174,8 @@
     "noWorkStatus": "من فضلك ادخل الحالة الوظيفية",
     "noAnswer": "من فضلك اجب عن هذا السؤال",
     "noContactMethod": "من فضلك اختر طريقة التواصل",
-    "fieldRequired": "هذا الحقل مطلوب"
+    "fieldRequired": "هذا الحقل مطلوب",
+    "noComments": "لا يوجد أي تعليقات للعرض",
+    "noNotes": "لا يوجد أي مولاحظات للعرض"
   }
 }
