Added and updated translation

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -20,46 +20,56 @@
     "pending": "انتظار",
     "active": "فعال",
     "postponed": "تأجيل",
-    "finished": "أنهى",
+    "finished": "أتّم",
     "canceled": "توقف",
     "fullPay": "تكلفة كاملة",
     "partialPay": "تكلفة جزئية",
     "noPay": "بدون تكلفة",
     "submit": "إرسال",
     "clearForm": "حذف البيانات",
+    "clear": "حذف",
     "whatsapp": "واتساب",
     "telegram": "تيليجرام",
     "call": "اتصال",
     "search": "بحث",
     "loading": "تحميل",
-    "cancel": "الغاء"
+    "cancel": "الغاء",
+    "time": "الوقت",
+    "day": "اليوم"
   },
   "dateTime": {
     "day": "يوم",
     "month": "شهر",
     "year": "سنة",
     "week": "اسبوع",
+    "hour": "ساعة",
+    "minute": "دقيقة",
+    "period": "ص/م",
+    "AM": "ص",
+    "PM": "م",
     "symbols": {
       "day": "يوم",
       "month": "شهر",
-      "year": "سنة"
+      "year": "سنة",
+      "hour": "ساعة",
+      "minute": "دقيقة"
     },
-    "weekDays": {
-      "Monday": "الاثنين",
-      "Tuesday": "الثلاثاء",
-      "Wednesday": "اﻷربعاء",
-      "Thursday": "الخميس",
-      "Friday": "الجمعة",
-      "Saturday": "السبت",
-      "Sunday": "اﻷحد",
+    "weekDay": {
+      "Mon": "الاثنين",
+      "Tue": "الثلاثاء",
+      "Wed": "اﻷربعاء",
+      "Thu": "الخميس",
+      "Fri": "الجمعة",
+      "Sat": "السبت",
+      "Sun": "اﻷحد",
       "short": {
-        "Monday": "الاثنين",
-        "Tuesday": "الثلاثاء",
-        "Wednesday": "اﻷربعاء",
-        "Thursday": "الخميس",
-        "Friday": "الجمعة",
-        "Saturday": "السبت",
-        "Sunday": "اﻷحد"
+        "Mon": "الاثنين",
+        "Tue": "الثلاثاء",
+        "Wed": "اﻷربعاء",
+        "Thu": "الخميس",
+        "Fri": "الجمعة",
+        "Sat": "السبت",
+        "Sun": "اﻷحد"
       }
     }
   },
