Implemented students' schedule

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -186,6 +186,6 @@
     "noContactMethod": "من فضلك اختر طريقة التواصل",
     "fieldRequired": "هذا الحقل مطلوب",
     "noComments": "لا يوجد أي تعليقات للعرض",
-    "noNotes": "لا يوجد أي مولاحظات للعرض"
+    "noNotes": "لا يوجد أي ملاحظات للعرض"
   }
 }
