Refactored the popup component and context

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -35,7 +35,9 @@
     "loading": "تحميل",
     "cancel": "الغاء",
     "time": "الوقت",
-    "day": "اليوم"
+    "day": "اليوم",
+    "generateLink": "انشاء رابط",
+    "comments": "التعليقات"
   },
   "dateTime": {
     "day": "يوم",
