--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -35,7 +35,9 @@
     "loading": "loading",
     "cancel": "cancel",
     "time": "time",
-    "day": "day"
+    "day": "day",
+    "generateLink": "generate Link",
+    "comments": "comments"
   },
   "dateTime": {
     "day": "day",
