Refined students enroll popup

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -20,6 +20,7 @@
     "pending": "انتظار",
     "active": "فعال",
     "inactive": "غير فعال",
+    "expired": "منتهي",
     "postponed": "تأجيل",
     "finished": "أتّم",
     "canceled": "توقف",
