Polished flash messages and added missing student form submit

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -41,8 +41,8 @@
     "generateLink": "انشاء رابط",
     "comments": "التعليقات",
     "link": "الرابط",
-    "links": "روابط",
-    "form": "استمارة",
+    "links": "الروابط",
+    "form": "الاستمارة",
     "friendlyName": "اسم تعريفي",
     "status": "الحالة",
     "subscription": "الاشتراك"
@@ -125,7 +125,7 @@
     "leaveQuestion": "اذا كان لديك اي استفسارات أو تعليقات اكتب لنا هنا"
   },
   "pages": {
-    "students": {
+    "student": {
       "title": "الطُلاب",
       "counter_zero": "لا يوجد طلاب مختارين",
       "counter_one": "تم تحديد طالب",
@@ -137,10 +137,10 @@
       "newStudents": "الطُلاب الجُديد",
       "newEnroll": "اسم رابط تسجيل جديد"
     },
-    "customers": {
+    "customer": {
       "formTitle": "تواصل معنا"
     },
-    "teachers": {
+    "teacher": {
       "active": "المعلمون",
       "archived": "اﻷرشيف"
     }
@@ -194,6 +194,12 @@
     "noContactMethod": "من فضلك اختر طريقة التواصل",
     "fieldRequired": "هذا الحقل مطلوب",
     "noComments": "لا يوجد أي تعليقات للعرض",
-    "noNotes": "لا يوجد أي ملاحظات للعرض"
+    "noNotes": "لا يوجد أي ملاحظات للعرض",
+    "student": {
+      "enrollSuccess": "<0><0>شكراً</0> <1>على الانضمام!</1></0><1>سوف نتواصل معكم قريباً.</1>",
+      "enrollFail": "<0>هناك خطأ ما!</0><1>من فضلك حاول مرة أخرى لاحقاً.</1>",
+      "addSuccess": "<0><0>لقد تم اضافة طالب جديد</0> <1>بنجاح!</1></0>",
+      "addFail": "<0>هناك خطأ ما!</0><1>من فضلك حاول مرة أخرى لاحقاً.</1>"
+    }
   }
 }
