Added a copied heads up message

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -195,6 +195,7 @@
     "fieldRequired": "هذا الحقل مطلوب",
     "noComments": "لا يوجد أي تعليقات للعرض",
     "noNotes": "لا يوجد أي ملاحظات للعرض",
+    "copied": "تم النسخ",
     "student": {
       "enrollSuccess": "<0><0>شكراً</0> <1>على الانضمام!</1></0><1>سوف نتواصل معكم قريباً.</1>",
       "enrollFail": "<0>هناك خطأ ما!</0><1>من فضلك حاول مرة أخرى لاحقاً.</1>",
