Created teacher enroll and updated teacher context

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -138,7 +138,8 @@
       "formTitle": "reach out"
     },
     "teacher": {
-      "title": "teachers"
+      "title": "teachers",
+      "formTitle": "بيانات المُعلم"
     }
   },
   "governorate": {
@@ -192,9 +193,11 @@
     "noComments": "no comments found to display",
     "noNotes": "no notes found to display",
     "copied": "copied to clipboard",
+    "flash": {
+      "joined": "<0><0>Thank You</0> <1>for Joining!</1></0><1>We'll contact you soon.</1>",
+      "error": "<0>Something Went Wrong!</0><1>Please try again later.</1>"
+    },
     "student": {
-      "enrollSuccess": "<0><0>Thank You</0> <1>for Joining!</1></0><1>We'll contact you soon.</1>",
-      "enrollFail": "<0>Something Went Wrong!</0><1>Please try again later.</1>",
       "addSuccess": "<0><0>A New Student was Added</0> <1>Successfully!</1></0>",
       "addFail": "<0>Something Went Wrong!</0><1>Please try again later.</1>"
     }
