--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -142,7 +142,8 @@
       "formTitle": "تواصل معنا"
     },
     "teacher": {
-      "title": "المُعلمون"
+      "title": "المُعلمون",
+      "formTitle": "بيانات المُعلم"
     }
   },
 
@@ -197,9 +198,11 @@
     "noComments": "لا يوجد أي تعليقات للعرض",
     "noNotes": "لا يوجد أي ملاحظات للعرض",
     "copied": "تم النسخ",
+    "flash": {
+      "joined": "<0><0>شكراً</0> <1>على الانضمام!</1></0><1>سوف نتواصل معكم قريباً.</1>",
+      "error": "<0>هناك خطأ ما!</0><1>من فضلك حاول مرة أخرى لاحقاً.</1>"
+    },
     "student": {
-      "enrollSuccess": "<0><0>شكراً</0> <1>على الانضمام!</1></0><1>سوف نتواصل معكم قريباً.</1>",
-      "enrollFail": "<0>هناك خطأ ما!</0><1>من فضلك حاول مرة أخرى لاحقاً.</1>",
       "addSuccess": "<0><0>لقد تم اضافة طالب جديد</0> <1>بنجاح!</1></0>",
       "addFail": "<0>هناك خطأ ما!</0><1>من فضلك حاول مرة أخرى لاحقاً.</1>"
     }
