Added teacher enrolls

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -143,7 +143,8 @@
     },
     "teacher": {
       "title": "المُعلمون",
-      "formTitle": "بيانات المُعلم"
+      "formTitle": "بيانات المُعلم",
+      "newTeachers": "المُعلمون الجُديد"
     }
   },
 
@@ -203,8 +204,10 @@
       "error": "<0>هناك خطأ ما!</0><1>من فضلك حاول مرة أخرى لاحقاً.</1>"
     },
     "student": {
-      "addSuccess": "<0><0>لقد تم اضافة طالب جديد</0> <1>بنجاح!</1></0>",
-      "addFail": "<0>هناك خطأ ما!</0><1>من فضلك حاول مرة أخرى لاحقاً.</1>"
+      "addSuccess": "<0><0>تم اضافة طالب جديد</0> <1>بنجاح!</1></0>"
+    },
+    "teacher": {
+      "addSuccess": "<0><0>تم اضافة معلم جديد</0> <1>بنجاح!</1></0>"
     }
   }
 }
