--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -139,7 +139,8 @@
     },
     "teacher": {
       "title": "teachers",
-      "formTitle": "بيانات المُعلم"
+      "formTitle": "بيانات المُعلم",
+      "newTeachers": "new teachers"
     }
   },
   "governorate": {
@@ -198,8 +199,10 @@
       "error": "<0>Something Went Wrong!</0><1>Please try again later.</1>"
     },
     "student": {
-      "addSuccess": "<0><0>A New Student was Added</0> <1>Successfully!</1></0>",
-      "addFail": "<0>Something Went Wrong!</0><1>Please try again later.</1>"
+      "addSuccess": "<0><0>A New Student was Added</0> <1>Successfully!</1></0>"
+    },
+    "teacher": {
+      "addSuccess": "<0><0>A New Teacher was Added</0> <1>Successfully!</1></0>"
     }
   }
 }
