--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -209,11 +209,10 @@
       "joined": "<0><0>شكراً</0> <1>على الانضمام!</1></0><1>سوف نتواصل معكم قريباً.</1>",
       "error": "<0>هناك خطأ ما!</0><1>من فضلك حاول مرة أخرى لاحقاً.</1>"
     },
-    "student": {
-      "addSuccess": "<0><0>تم اضافة طالب جديد</0> <1>بنجاح!</1></0>"
-    },
-    "teacher": {
-      "addSuccess": "<0><0>تم اضافة معلم جديد</0> <1>بنجاح!</1></0>"
+    "toast": {
+      "error": "<0>خطأ:</0> لقد فشلت العملية!",
+      "newStudent": "<0>نجاح:</0> لقد تم اضافة طالب/ة جديد",
+      "newTeacher": "<0>نجاح:</0> لقد تم اضافة مُعلم/ة جديد"
     }
   }
 }
