Added a note for phone number comunication methods

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -196,6 +196,7 @@
     "noComments": "no comments found to display",
     "noNotes": "no notes found to display",
     "copied": "copied to clipboard",
+    "selectAvailable": "select all available contact methods for this number",
     "flash": {
       "joined": "<0><0>Thank You</0> <1>for Joining!</1></0><1>We'll contact you soon.</1>",
       "error": "<0>Something Went Wrong!</0><1>Please try again later.</1>"
