--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -205,6 +205,7 @@
     "noComments": "لا يوجد أي تعليقات للعرض",
     "noNotes": "لا يوجد أي ملاحظات للعرض",
     "copied": "تم النسخ",
+    "selectAvailable": "اخطر جميع وسائل التواصل المتاحة لهذا الرقم",
     "flash": {
       "joined": "<0><0>شكراً</0> <1>على الانضمام!</1></0><1>سوف نتواصل معكم قريباً.</1>",
       "error": "<0>هناك خطأ ما!</0><1>من فضلك حاول مرة أخرى لاحقاً.</1>"
