--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -46,7 +46,8 @@
     "friendlyName": "اسم تعريفي",
     "status": "الحالة",
     "subscription": "الاشتراك",
-    "justAyah": "ولو آية"
+    "justAyah": "ولو آية",
+    "acceptTermsOfService": "قبول السياسات"
   },
   "dateTime": {
     "day": "يوم",
@@ -93,7 +94,7 @@
   "personalInfo": {
     "fullName": "الاسم الثلاثي",
     "firstName": "الاسم",
-    "middleName": "الأب",
+    "middleName": "اﻷب",
     "lastName": "العائلة",
     "countryCode": "كود الدولة",
     "phoneNumber": "رقم الهاتف",
@@ -121,7 +122,7 @@
     "unemployed": "عاطل عن العمل",
     "other": "غير ذلك",
     "noDetails": "التفاصيل",
-    "quran": "هل سبق لك حفظ شئ من القرآن ؟",
+    "quran": "هل سبق لك حفظ شئ من القرآن؟",
     "zoom": "هل في امكانك استخدام تطبيق المحادثات \"Zoom\"؟ حيث أن اللقاءات تتم من خلاله.",
     "leaveQuestion": "اذا كان لديك اي استفسارات أو تعليقات اكتب لنا هنا"
   },
@@ -178,7 +179,7 @@
       "PortSaid": "بورسعيد",
       "Qalyubia": "القليوبية",
       "Qena": "قنا",
-      "RedSea": "البحر الأحمر",
+      "RedSea": "البحر اﻷحمر",
       "Sharqia": "الشرقية",
       "Sohag": "سوهاج",
       "SouthSinai": "جنوب سيناء",
@@ -200,12 +201,13 @@
     "noGender": "من فضلك اختر النوع",
     "noWorkStatus": "من فضلك ادخل الحالة الوظيفية",
     "noAnswer": "من فضلك اجب عن هذا السؤال",
-    "noContactMethod": "من فضلك اختر طريقة التواصل",
+    "noContactMethod": "من فضلك اختر وسائل التواصل المتاحة",
     "fieldRequired": "هذا الحقل مطلوب",
     "noComments": "لا يوجد أي تعليقات للعرض",
     "noNotes": "لا يوجد أي ملاحظات للعرض",
     "copied": "تم النسخ",
     "selectAvailable": "اخطر جميع وسائل التواصل المتاحة لهذا الرقم",
+    "termsOfService": "لقد قرأت و قبلت السياسات",
     "flash": {
       "joined": "<0><0>شكراً</0> <1>على الانضمام!</1></0><1>سوف نتواصل معكم قريباً.</1>",
       "error": "<0>هناك خطأ ما!</0><1>من فضلك حاول مرة أخرى لاحقاً.</1>"
