--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -208,6 +208,8 @@
     "copied": "تم النسخ",
     "selectAvailable": "اخطر جميع وسائل التواصل المتاحة لهذا الرقم",
     "termsOfService": "لقد قرأت و قبلت السياسات",
+    "online": "تم عودة الاتصال بالانترنت",
+    "offline": "تم فقد الاتصال بالانترنت",
     "flash": {
       "joined": "<0><0>شكراً</0> <1>على الانضمام!</1></0><1>سوف نتواصل معكم قريباً.</1>",
       "error": "<0>هناك خطأ ما!</0><1>من فضلك حاول مرة أخرى لاحقاً.</1>"
