--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -135,7 +135,7 @@
       "newStudents": "new students",
       "newEnroll": "new enroll link name"
     },
-    "customer": {
+    "lead": {
       "formTitle": "reach out"
     },
     "teacher": {
