Fixed parsers and linked student list with teacher index

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -216,8 +216,8 @@
     },
     "toast": {
       "error": "<0>خطأ:</0> لقد فشلت العملية!",
-      "newStudent": "<0>نجاح:</0> لقد تم اضافة طالب/ة جديد",
-      "newTeacher": "<0>نجاح:</0> لقد تم اضافة مُعلم/ة جديد"
+      "newStudent": "<0>نجاح:</0> لقد تم اضافة طالب/ة جديد/ة",
+      "newTeacher": "<0>نجاح:</0> لقد تم اضافة مُعلم/ة جديد/ة"
     }
   }
 }
