--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,5 +1,6 @@
 {
   "dir": "rtl",
+
   "globals": {
     "googleSignIn": "الدخول بحساب جوجل",
     "joinInitiative": "انضم إلى المبادرة",
@@ -49,8 +50,13 @@
     "status": "الحالة",
     "subscription": "الاشتراك",
     "justAyah": "ولو آية",
-    "acceptTermsOfService": "قبول السياسات"
+    "acceptTermsOfService": "قبول السياسات",
+    "termsOfService": "السياسات",
+    "name": "الاسم",
+    "numberOfSessions": "عدد اللقاءات",
+    "add": "اضافة"
   },
+
   "dateTime": {
     "day": "يوم",
     "month": "شهر",
@@ -87,6 +93,7 @@
       }
     }
   },
+
   "nav": {
     "home": "الرئيسية",
     "students": "الطُلاب",
@@ -96,6 +103,7 @@
     "courses": "البرامج",
     "users": "المستخدمون"
   },
+
   "personalInfo": {
     "fullName": "الاسم الثلاثي",
     "firstName": "الاسم",
@@ -131,7 +139,11 @@
     "zoom": "هل في امكانك استخدام تطبيق المحادثات \"Zoom\"؟ حيث أن اللقاءات تتم من خلاله.",
     "leaveQuestion": "اذا كان لديك اي استفسارات أو تعليقات اكتب لنا هنا"
   },
+
   "pages": {
+    "admin": {
+      "title": "الرئيسية"
+    },
     "student": {
       "title": "الطُلاب",
       "counter_zero": "لا يوجد طلاب مختارين",
@@ -145,6 +157,7 @@
       "newEnroll": "اسم رابط تسجيل جديد"
     },
     "lead": {
+      "title": "العُملاء",
       "formTitle": "تواصل معنا"
     },
     "teacher": {
@@ -157,6 +170,10 @@
       "counter_few": "تم تحديد {{count}} مُعلمون",
       "counter_many": "تم تحديد {{count}} مُعلمون",
       "counter_other": "تم تحديد {{count}} مُعلمون"
+    },
+    "course": {
+      "title": "البرامج",
+      "new": "اضافة برنامج جديد"
     }
   },
 
@@ -191,6 +208,7 @@
       "Suez": "السويس"
     }
   },
+
   "messages": {
     "noFullName": "من فضلك ادخل اسمك الثلاثي",
     "noFirstName": "من فضلك ادخل اسمك",
@@ -215,6 +233,9 @@
     "termsOfService": "لقد قرأت و قبلت السياسات",
     "online": "تم عودة الاتصال بالانترنت",
     "offline": "تم فقد الاتصال بالانترنت",
+    "notLtOne": "يجب ان يكون العدد 1 على الاقل",
+    "noCourseName": "من فضلك ادخال اسم البرنامج",
+    "noSessionCount": "من فضلك ادخال عدد اللقاءات",
     "flash": {
       "joined": "<0><0>شكراً</0> <1>على الانضمام!</1></0><1>سوف نتواصل معكم قريباً.</1>",
       "error": "<0>هناك خطأ ما!</0><1>من فضلك حاول مرة أخرى لاحقاً.</1>"
