--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -49,7 +49,11 @@
     "status": "status",
     "subscription": "subscription",
     "justAyah": "Just Ayah",
-    "acceptTermsOfService": "accept terms of service"
+    "acceptTermsOfService": "accept terms of service",
+    "termsOfService": "terms of service",
+    "name": "name",
+    "numberOfSessions": "number of sessions",
+    "add": "add"
   },
   "dateTime": {
     "day": "day",
@@ -132,6 +136,9 @@
     "leaveQuestion": "if you have any questions or comments leave them here"
   },
   "pages": {
+    "admin": {
+      "title": "home"
+    },
     "student": {
       "title": "students",
       "counter_one": "1 student selected",
@@ -141,6 +148,7 @@
       "newEnroll": "new enroll link name"
     },
     "lead": {
+      "title": "leads",
       "formTitle": "reach out"
     },
     "teacher": {
@@ -149,6 +157,9 @@
       "newTeachers": "new teachers",
       "counter_one": "1 teacher selected",
       "counter_other": "{{count}} teachers selected"
+    },
+    "course": {
+      "title": "programs"
     }
   },
   "governorate": {
@@ -206,6 +217,9 @@
     "termsOfService": "I've read and accepted the terms of service",
     "online": "Network connection back",
     "offline": "Network connection lost",
+    "notLtOne": "the number must be at least one",
+    "noCourseName": "please enter the course name",
+    "noSessionCount": "please enter the number of sessions",
     "flash": {
       "joined": "<0><0>Thank You</0> <1>for Joining!</1></0><1>We'll contact you soon.</1>",
       "error": "<0>Something Went Wrong!</0><1>Please try again later.</1>"
