--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -242,8 +242,11 @@
     },
     "toast": {
       "error": "<0>خطأ:</0> لقد فشلت العملية!",
-      "newStudent": "<0>نجاح:</0> لقد تم اضافة طالب/ة جديد/ة",
-      "newTeacher": "<0>نجاح:</0> لقد تم اضافة مُعلم/ة جديد/ة"
+      "newStudent": "<0>نجاح:</0> لقد تم اضافة طالب/ة جديد/ة!",
+      "newTeacher": "<0>نجاح:</0> لقد تم اضافة مُعلم/ة جديد/ة!",
+      "newCourse": "<0>نجاح:</0> لقد تم اضافة برنامج جديد!",
+      "newStudentEnroll": "<0>نجاح:</0> لقد تم اضافة طلب تسجيل طالب/ة جديد!",
+      "newTeacherEnroll": "<0>نجاح:</0> لقد تم اضافة طلب تسجيل معلم/ة جديد!"
     }
   }
 }
