WIP: Creating payments pages

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -101,7 +101,8 @@
     "leads": "العُملاء",
     "staff": "الموظفون",
     "courses": "البرامج",
-    "users": "المستخدمون"
+    "users": "المستخدمون",
+    "payments": "المدفوعات"
   },
 
   "personalInfo": {
