Added new student form

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -33,6 +33,10 @@
     "submit": "إرسال",
     "clearForm": "حذف البيانات",
     "clear": "حذف",
+    "facebook": "الفيسبوك",
+    "linkedin": "لينكدان",
+    "tiktok": "التبك توك",
+    "friend": "احد طلاب المبادرة / صديق",
     "whatsapp": "واتساب",
     "telegram": "تيليجرام",
     "call": "اتصال",
@@ -54,7 +58,8 @@
     "termsOfService": "السياسات",
     "name": "الاسم",
     "numberOfSessions": "عدد اللقاءات",
-    "add": "اضافة"
+    "add": "اضافة",
+    "other": "غير ذلك"
   },
 
   "dateTime": {
@@ -125,6 +130,7 @@
     "governorate": "المحافظة",
     "residence": "محل الإقامة",
     "education": "المؤهل",
+    "job": "الوظيفة",
     "doesWork": "هل تعمل؟",
     "occupation": "الوظيفة",
     "noWorkReason": "هل انت/ي؟",
@@ -137,6 +143,9 @@
     "noDetails": "التفاصيل",
     "quran": "هل سبق لك حفظ شئ من القرآن؟",
     "zoom": "هل في امكانك استخدام تطبيق المحادثات \"Zoom\"؟ حيث أن اللقاءات تتم من خلاله.",
+    "zoomTestSession": "هل تحتاج الي لقاء تجريبي لبرنامج \"Zoom\"؟ ",
+    "telegram": "هل في امكانك استخدام تطبيق المحادثات \"Telegram\"؟ حيث أنه وسيلة التواصل الاساسية لدينا.",
+    "lead": "كيف تعرفت على مبادرة \"ولو أية\"؟",
     "leaveQuestion": "اذا كان لديك اي استفسارات أو تعليقات اكتب لنا هنا"
   },
 
@@ -154,7 +163,8 @@
       "counter_other": "تم تحديد {{count}} طالب",
       "formTitle": "بيانات الطالب",
       "newStudents": "الطُلاب الجُدد",
-      "newEnroll": "اسم رابط تسجيل جديد"
+      "newEnroll": "اسم رابط تسجيل جديد",
+      "submitting": "جاري تسجيل بيانات الطالب"
     },
     "lead": {
       "title": "العُملاء",
