Changed phone nunber field and fixed some styles

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -224,6 +224,7 @@
     "noFirstName": "من فضلك ادخل اسمك",
     "noMiddleName": "من فضلك ادخل اسم اﻷب",
     "noLastName": "من فضلك ادخل اسم العائلة",
+    "noCountryCode": "من فضلك تأكد ان رقم الهانف يشمل رمز الدولة",
     "noPhoneNumber": "من فضلك ادخل رقم الهاتف",
     "wrongPhoneNumber": "من فضلك تأكد من ادخال رقم هاتف صحيح",
     "noEducation": "من فضلك ادخل المؤهل الدراسي",
@@ -239,7 +240,7 @@
     "noComments": "لا يوجد أي تعليقات للعرض",
     "noNotes": "لا يوجد أي ملاحظات للعرض",
     "copied": "تم النسخ",
-    "selectAvailable": "اخطر جميع وسائل التواصل المتاحة لهذا الرقم",
+    "selectAvailable": "اختر جميع وسائل التواصل المتاحة لهذا الرقم",
     "termsOfService": "لقد قرأت و قبلت السياسات",
     "online": "تم عودة الاتصال بالانترنت",
     "offline": "تم فقد الاتصال بالانترنت",
