--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -18,6 +18,7 @@
     "newNote": "ملحوظة جديدة",
     "writeNoteHere": "اكتب ملحوظتك هنا",
     "save": "حفظ",
+    "undo": "تراجع",
     "loadMore": "حمل المزيد",
     "unknown": "مجهول",
     "pending": "انتظار",
@@ -142,9 +143,9 @@
     "other": "غير ذلك",
     "noDetails": "التفاصيل",
     "quran": "هل سبق لك حفظ شئ من القرآن؟",
-    "zoom": "هل في امكانك استخدام تطبيق المحادثات \"Zoom\"؟ حيث أن اللقاءات تتم من خلاله.",
-    "zoomTestSession": "هل تحتاج الي لقاء تجريبي لبرنامج \"Zoom\"؟ ",
-    "telegram": "هل في امكانك استخدام تطبيق المحادثات \"Telegram\"؟ حيث أنه وسيلة التواصل الاساسية لدينا.",
+    "zoom": "هل في امكانك استخدام تطبيق المحادثات \"زوم\"؟ حيث أن اللقاءات تتم من خلاله.",
+    "zoomTestSession": "هل تحتاج الي لقاء تجريبي لبرنامج \"زوم\"؟ ",
+    "telegram": "هل في امكانك استخدام تطبيق المحادثات \"تيليجرام\"؟ حيث أنه وسيلة التواصل الاساسية لدينا.",
     "lead": "كيف تعرفت على مبادرة \"ولو أية\"؟",
     "leaveQuestion": "اذا كان لديك اي استفسارات أو تعليقات اكتب لنا هنا"
   },
@@ -164,7 +165,8 @@
       "formTitle": "بيانات الطالب",
       "newStudents": "الطُلاب الجُدد",
       "newEnroll": "اسم رابط تسجيل جديد",
-      "submitting": "جاري تسجيل بيانات الطالب"
+      "submitting": "جاري تسجيل بيانات الطالب",
+      "saving": "جاري حفظ التعديلات"
     },
     "lead": {
       "title": "العُملاء",
