Added a duplication check for session forms + fixing bugs + refactoring

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -151,8 +151,8 @@
   },
 
   "session": {
-    "recitation": "التسميع",
-    "memorization": "الحفظ"
+    "recitation": "التسميع (مراجعة ما سبق)",
+    "memorization": "الحفظ (الجديد)"
   },
 
   "pages": {
